--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "ChoresTracker",
+            "request": "launch",
+            "mainClass": "com.example.demo.ChoresTracker",
+            "projectName": "demo-back"
+        },
+        {
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:5173",
-
             "webRoot": "${workspaceFolder}/front"
         }
     ]
