--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-server.servlet.context-path=/api
-
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+images.data.folder=~/choretracker/images/
