--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
+data.folder=~/choretracker/
 images.data.folder=~/choretracker/images/
+enable.login=true
+access.control=true
