--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
