--- a/back/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,3 @@
 databaseChangeLog:
-  - include:
-      file: db/changelog/changes/001-create-user-table.yml
-  - include:
-      file: db/changelog/changes/002-create-chore-table.yml
+  - includeAll:
+      path: db/changelog/changes/
