--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "vite",
+    "dev:browser": "vite --mode browser",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
