--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "dev:browser": "vite --mode browser",
     "build": "vue-tsc -b && vite build",
+    "build:browser": "vue-tsc -b && vite build --mode browser",
     "test": "vitest",
     "preview": "vite preview"
   },
